// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter-stacked-bar should click rect.bar 1`] = `
<div class="outer-container" style="width: 377px; height: 233px;">
    <div class="backdrop"></div>
    <div class="card-container">
        <div class="inner-container" style="width: 377px; height: 233px;">
            <div class="container-header">
                <div class="icon-box">
                    <i class="fa fa-window-maximize"></i>
                </div>
                <!---->
            </div>
            <div class="render-area">
                <div id="test-filter-stacked-bar" class="krt-dc-component dc-chart" style="display: flex; position: relative; width: 100%; height: 100%;">
                    <!---->
                    <div class="reset-button">
                        <a class="reset" style="">
                            <i class="fa fa-ban">&nbsp;</i> <span>フィルター解除</span></a>
                    </div>
                    <!---->
                    <svg width="200" height="200">
                        <g>
                            <g class="grid-line horizontal" transform="translate(40,20)"></g>
                            <g class="grid-line vertical" transform="translate(40,20)">
                                <line x1="0" y1="150" x2="0" y2="0" opacity="0"></line>
                                <line x1="60" y1="150" x2="60" y2="0" opacity="0"></line>
                            </g>
                            <g class="chart-body" transform="translate(40, 20)" clip-path="url(about:blank#test-filter-stacked-bar-clip)">
                                <g class="stack _0">
                                    <rect class="bar" fill="#1f77b4" y="150" height="0"></rect>
                                    <rect class="bar" fill="#1f77b4" y="150" height="0"></rect>
                                    <text class="barLabel" text-anchor="middle" cursor="pointer"></text>
                                    <text class="barLabel" text-anchor="middle" cursor="pointer"></text>
                                </g>
                            </g>
                            <g class="axis x" transform="translate(40,170)">
                                <g class="tick" style="opacity: 0.000001;" transform="translate(30,0)">
                                    <line y2="6"></line>
                                    <text dy=".71em" style="text-anchor: middle;" y="9">a</text>
                                </g>
                                <g class="tick" style="opacity: 0.000001;" transform="translate(90,0)">
                                    <line y2="6"></line>
                                    <text dy=".71em" style="text-anchor: middle;" y="9">b</text>
                                </g>
                                <path class="domain"></path>
                            </g>
                            <g class="axis y" transform="translate(40,20)">
                                <path class="domain"></path>
                            </g>
                        </g>
                        <defs>
                            <clippath id="test-filter-stacked-bar-clip">
                                <rect width="140" height="170" transform="translate(-10, -10)"></rect>
                            </clippath>
                        </defs>
                        <g class="dc-legend" transform="translate(0,0)">
                            <g class="dc-legend-item" transform="translate(0,0)">
                                <rect width="12" height="12" fill="#1f77b4"></rect>
                                <text x="14" y="10.5">undefined</text>
                            </g>
                        </g>
                    </svg>
                </div>
            </div>
        </div>
    </div>
</div>
`;

exports[`filter-stacked-bar to match snapshot 1`] = `
<div class="outer-container" style="width: 377px; height: 233px;">
    <div class="backdrop"></div>
    <div class="card-container">
        <div class="inner-container" style="width: 377px; height: 233px;">
            <div class="container-header">
                <div class="icon-box">
                    <i class="fa fa-window-maximize"></i>
                </div>
                <!---->
            </div>
            <div class="render-area">
                <div id="test-filter-stacked-bar" class="krt-dc-component dc-chart" style="display: flex; position: relative; width: 100%; height: 100%;">
                    <!---->
                    <div class="reset-button">
                        <a class="reset" style="display: none;">
                            <i class="fa fa-ban">&nbsp;</i> <span>フィルター解除</span></a>
                    </div>
                    <!---->
                    <svg width="200" height="200">
                        <g>
                            <g class="grid-line horizontal" transform="translate(40,20)"></g>
                            <g class="grid-line vertical" transform="translate(40,20)">
                                <line x1="0" y1="150" x2="0" y2="0" opacity="0"></line>
                                <line x1="60" y1="150" x2="60" y2="0" opacity="0"></line>
                            </g>
                            <g class="chart-body" transform="translate(40, 20)" clip-path="url(about:blank#test-filter-stacked-bar-clip)">
                                <g class="stack _0">
                                    <rect class="bar" fill="#1f77b4" y="150" height="0"></rect>
                                    <rect class="bar" fill="#1f77b4" y="150" height="0"></rect>
                                    <text class="barLabel" text-anchor="middle" cursor="pointer"></text>
                                    <text class="barLabel" text-anchor="middle" cursor="pointer"></text>
                                </g>
                            </g>
                            <g class="axis x" transform="translate(40,170)">
                                <g class="tick" style="opacity: 0.000001;" transform="translate(30,0)">
                                    <line y2="6"></line>
                                    <text dy=".71em" style="text-anchor: middle;" y="9">a</text>
                                </g>
                                <g class="tick" style="opacity: 0.000001;" transform="translate(90,0)">
                                    <line y2="6"></line>
                                    <text dy=".71em" style="text-anchor: middle;" y="9">b</text>
                                </g>
                                <path class="domain"></path>
                            </g>
                            <g class="axis y" transform="translate(40,20)">
                                <path class="domain"></path>
                            </g>
                        </g>
                        <defs>
                            <clippath id="test-filter-stacked-bar-clip">
                                <rect width="140" height="170" transform="translate(-10, -10)"></rect>
                            </clippath>
                        </defs>
                        <g class="dc-legend" transform="translate(0,0)">
                            <g class="dc-legend-item" transform="translate(0,0)">
                                <rect width="12" height="12" fill="#1f77b4"></rect>
                                <text x="14" y="10.5">undefined</text>
                            </g>
                        </g>
                    </svg>
                </div>
            </div>
        </div>
    </div>
</div>
`;
